@@ -1,3 +1,7 @@
+2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>
+
+	* Fixed bug #16935: tx_coreupdates_installversioning is obsolete
+
 2011-01-21  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #17120: Problem with the integration of third-party trees (Thanks to Stefan Galinksi)
